--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -31,7 +31,7 @@ li {
 
 .wrapper {
   /* border: 2px dotted rgb(96, 139, 168); */
-  width: 1000px;
+  width: 1300px;
 
 }
 
@@ -48,10 +48,20 @@ li {
   margin: 10px;
 }
 
+div.wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 div.beer-info {
   text-align: center;
 }
 
 form#beer-form{
   margin-bottom: 15px;
+}
+
+p {
+  display: block;
 }
