--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,6 +1,6 @@
 body{
   font-family: 'Cabin', sans-serif;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 
@@ -17,12 +17,8 @@ img#logo {
   width: auto;
 }
 
-/* Watch for name tags, if image doesn't load it might have to due with that. */
-
 #banner {
-  /* position: absolute; */
   text-align: center;
-  /* border: 2px dotted rgb(96, 139, 168); */
 }
 
 li {
@@ -32,9 +28,8 @@ li {
 
 
 .wrapper {
-  /* border: 2px dotted rgb(96, 139, 168); */
   width: 1300px;
-
+  overflow: auto;
 }
 
 .flex {
@@ -57,6 +52,10 @@ div.wrapper {
 }
 
 div.beer-info {
+  text-align: center;
+}
+
+div.beer-box{
   text-align: center;
 }
 
